# NCS-logger

./: AGENTS.md  session-001-speed-logger-handoff.md  session-002-grid-view-handoff.md  session-003-dark-mode-handoff.md
ncs-logger-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ncs-logger-app/src/: App.css  App.tsx  index.css
ncs-logger-app/src-tauri/: Cargo.toml  tauri.conf.json
ncs-logger-app/src-tauri/src/: main.rs  storage.rs
ncs-logger-app/src/domain/: loggerStorage.ts  loggerTypes.ts
