[package]
name = "ncs-logger-app"
version = "0.0.1"
description = "Army MARS NCS Logger desktop shell"
license = "UNLICENSED"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = [] }
